tests/baselines/reference/constructorAsType.errors.txt
tests/cases/compiler/constructorAsType.ts(1,5): error TS2322: Type '() => { name: string; }' is not assignable to type 'new () => { name: string; }'.
  Type '() => { name: string; }' provides no match for the signature 'new (): { name: string; }'.


==== tests/cases/compiler/constructorAsType.ts (1 errors) ====
    var Person:new () => {name: string;} = function () {return {name:"joe"};};
        ~~~~~~
!!! error TS2322: Type '() => { {|name|0|}: string; }' is not assignable to type 'new () => { {|name|1|}: string; }'.
!!! error TS2322:   Type '() => { name: string; }' provides no match for the signature 'new (): { name: string; }'.
!!! annotated symbol 0 tests/cases/compiler/constructorAsType.ts:1:61
!!! annotated symbol 1 tests/cases/compiler/constructorAsType.ts:1:23
    
    var Person2:{new() : {name:string;};};
    
    Person = Person2;